# math-practice

./: .editorconfig  .gitignore  README.md
.github/actions/setup/: action.yml
.github/workflows/: build.yaml
2024/cpp/linalg/linear_systems/: CMakeLists.txt  run.sh
2024/cpp/linalg/linear_systems/src/: example1_armadillo.cpp  example1_boost.cpp  example2_armadillo.cpp  example2_boost.cpp
2024/cpp/linalg/linear_systems/src/example1/: with_armadillo.cpp
2024/cpp/linalg/linear_systems/src/example2/: with_armadillo.cpp
2024/cpp/linalg/linear_systems/src/example3/: with_boost.cpp
2024/python/linear_algebra/: Pipfile
2024/scala/example0/: build.sbt
2024/ts/linalg-remix/: .editorconfig
cpp/linalg/: CMakeLists.txt  build.sh  run.sh
cpp/linalg/linear_systems/: CMakeLists.txt  conanfile.txt
cpp/linalg/linear_systems/src/: constants.hpp  tmp.cpp
cpp/linalg/linear_systems/src/example1/: with_boost.cpp
cpp/linalg/linear_systems/src/example2/: with_boost.cpp
cpp/linalg/linear_systems/src/example3/: with_armadillo.cpp
cpp/linalg/src/: example3.cpp  example_1_3.cpp  example_1_4.cpp
example/: Makefile  Pipfile  README.md  pyproject.toml  requirements.txt
java/: settings.gradle.kts
java/example/: Dockerfile  build.gradle.kts
java/example0/: build.gradle.kts
linear_algebra/: Makefile  Pipfile
linear_algebra/src/: main.py
linear_algebra/src/org_example_linearalg/: gauss_method.py
linear_algebra/test/org_example_linearalg/: gauss_method_example1_4.tex  test_gauss_method.py
python/calculus/derivative/: example1.ipynb  example10.ipynb  example11.ipynb  example12.ipynb  example13.ipynb  example14.ipynb  example15.ipynb  example16.ipynb  example17.ipynb  example18.ipynb  example19.ipynb  example2.ipynb  example20.ipynb  example21.ipynb  example22.ipynb  example23.ipynb  example24.ipynb  example25.ipynb  example26.ipynb  example27.ipynb  example28.ipynb  example29.ipynb  example3.ipynb  example30.ipynb  example31.ipynb  example32.ipynb  example33.ipynb  example34.ipynb  example35.ipynb  example36.ipynb  (+10 more)
python/example/: Dockerfile  Makefile
python/example0/: Pipfile  README.md
python/linalg/: example1.ipynb  example11.ipynb  example12.ipynb  example13.ipynb  example14.ipynb  example2.ipynb  example6.ipynb  example7.ipynb  example_1_13.ipynb  example_1_14.ipynb  example_1_15.ipynb  example_1_3.ipynb  example_1_7.ipynb  example_1_8.ipynb  example_1_9.ipynb  example_2_12.ipynb  example_2_13.ipynb  example_2_14.ipynb  example_2_7.ipynb  example_3_3.ipynb  example_3_4.ipynb  example_3_5.ipynb  example_3_8.ipynb  example_3_9.ipynb  exercise1.ipynb
python/utils/: basic_units.py
scala/: README.md
scala/example/: build.sbt
scala/example0/: build.sbt
ts/linalg_remix/: package.json
(+124 files in other folders)
